# TetriumColor

./: .gitignore  CMakeLists.txt  MANIFEST.in  readme.md  requirements.txt  setup.py  test.py
TetriumColor/: ColorSampler.py  ColorSpace.py  TetraColorPicker.py  TetraDisplay.py  TetraPlate.py  __init__.py
TetriumColor/Assets/: __init__.py
TetriumColor/Color/: ColorTransform.py  Metamers.py
TetriumColor/ColorMath/: ColorMathUtils.py  Conversion.py  GamutMath.py  Geometry.py  HueToDisplay.py  LPMetamerMismatch.py  Metamers.py  Sampling.py  SubSpaceIntersection.py
TetriumColor/Measurement/: MeasurementGUI.py  MeasurementRoutines.py  PR650.py  TetriumMeasurementRoutines.py  __init__.py
TetriumColor/Observer/: ColorSpaceTransform.py  DisplayObserverSensitivity.py  Inks.py  MaxBasis.py  MaxDisplayBasis.py  Observer.py  Spectra.py  Zonotope.py  __init__.py
TetriumColor/PsychoPhys/: HueSphere.py  HyperspectralImage.py  IshiharaPlate.py  Quest.py
TetriumColor/Utils/: BasisMath.py  CustomTypes.py  Hash.py  IO.py  ImageUtils.py  MathHelper.py  ParserOptions.py
TetriumColor/Visualization/: Animation.py  GamutViz.py  Geometry.py  PolyscopeUtils.py  __init__.py  cubeMapViz.py
cpp/: PCH.h
cpp/src/: PseudoIsochromaticPlateGenerator.cpp  TetriumColor.cpp
scripts/: test_color_space.py
scripts/cs184-slides/: closest_ref.csv  d65.csv  plot-refs.ipynb  ref_w_d65.csv  render3DOBS-for-boundary.py  render3DOBS-for-manifold-explain.py
scripts/generation/: generateLUT.py  (+14 more)
tests/: create-hue-sphere.py  test-cubemap.py  test-hsv-transform.py  test-metamer-grids.py  test.py
(+141 files in other folders)
